--- a/CE6003_example_2_1_eigenfaces.ipynb
+++ b/CE6003_example_2_1_eigenfaces.ipynb
@@ -6,7 +6,7 @@
       "name": "CE6003_example_2_1_eigenfaces.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMg6z0cQmZxmMNU9fsN2hRf",
+      "authorship_tag": "ABX9TyPJ3N0WOa3L8w7oICkk/+Ig",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "We will demonstrate reconstraction of faces with the eigenfaces.\n",
         "We will train a Support Vector Machine Classifier and demonstrate facial recognition. (Note that it is appropriate to use an SVM in this case as the dataset used [\"Olivetti Faces\"](https://scikit-learn.org/stable/datasets/index.html#real-world-datasets)  contains 40 people with 10 examples for each face. )\n",
         "\n",
-        "This example is based on the [scikit Learn tutorial](https://scipy-lectures.org/packages/scikit-learn/auto_examples/plot_eigenfaces.htm) "
+        "This example is based on the [scikit Learn tutorial](https://scipy-lectures.org/packages/scikit-learn/auto_examples/plot_eigenfaces.html) "
       ]
     },
     {
