--- a/Example_1_4_thresholding.ipynb
+++ b/Example_1_4_thresholding.ipynb
@@ -6,7 +6,7 @@
       "name": "Example_1_4_thresholding.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOP3pGWhXvRHSpzTpmIAOCt",
+      "authorship_tag": "ABX9TyPgJ8eH65zJmpLFme1F/VvR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "source": [
         "# Import libraries\n",
         "import numpy as np\n",
-        "import urllib\n",
+        "import urllib.request\n",
         "import numpy as np\n",
         "import cv2\n",
         "from matplotlib import pyplot as plt\n",
@@ -63,7 +63,7 @@
         "\treturn temp_image\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
         "blur = cv2.GaussianBlur(image,(k_size,k_size),sigma)    \n",
         "    \n"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
         "# Convert to greyscale\n",
         "gray = cv2.cvtColor(blur, cv2.COLOR_BGR2GRAY)\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -216,7 +216,7 @@
         "# Erosion operation stucturing element\n",
         "str2 = 40"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
