--- a/Etivity_assignment1_OlgaMinguett_20179766.ipynb
+++ b/Etivity_assignment1_OlgaMinguett_20179766.ipynb
@@ -87,7 +87,7 @@
         "from google.colab import files\n",
         "files.upload()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -137,7 +137,7 @@
         "#!rm kaggle.json\n",
         "#!rm ~/.kaggle/kaggle.*"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
         "\n",
         "!unzip ships-in-satellite-imagery.zip > /dev/null"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +218,7 @@
         "    image = cv2.resize(image, dsize=(int(y/sf), int(x/sf)), interpolation=cv2.INTER_CUBIC)\n",
         "    return image"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -237,7 +237,7 @@
         "print(np.shape(pos_img_list))\n",
         "print(np.shape(neg_img_list))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,7 +269,7 @@
         "n = 80 # number of x,y pixels in this image.\n",
         "n_pts = 4000 # number of points to use (are 4000 in dataset, 1000 positive 3000 negative)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -289,7 +289,7 @@
         "      train_pos = (np.concatenate((train_pos,np.reshape(img, (1, n*n)))) if i>0 else  np.reshape(img, (1, n*n)))\n",
         "   return train_pos "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,7 +302,7 @@
         "pos_img = read_images(pos_img_list)\n",
         "neg_img = read_images(neg_img_list)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -315,7 +315,7 @@
         "y_pos_labels = np.ones(len(pos_img_list))\n",
         "y_neg_labels = np.zeros(len(neg_img_list))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -328,7 +328,7 @@
         "dataset_img = np.concatenate((pos_img[0:1000,:],neg_img[0:3000,:]))\n",
         "dataset_labels = np.append(y_pos_labels,y_neg_labels)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -345,7 +345,7 @@
         "                                                    random_state=0,\n",
         "                                                    stratify=dataset_labels)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -361,7 +361,7 @@
         "print (\"X_train shape: \", X_train.shape)\n",
         "print (\"X_test shape: \", X_test.shape)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,7 +394,7 @@
         "   ax2[i].axis('off')\n",
         "   plt.tight_layout()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -445,7 +445,7 @@
         "from skimage.feature import hog\n",
         "from skimage import exposure"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -471,7 +471,7 @@
         "  hog_image = hog_image.astype(\"uint8\")\n",
         "  return fd, hog_image"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -491,7 +491,7 @@
         "  images_train.append(fd)\n",
         "  hogimages_train.append(hog_image)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -516,7 +516,7 @@
         "   ax2[i].imshow(np.reshape(X_train[i,0:n*n], (n, n)))\n",
         "   plt.tight_layout()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,7 +556,7 @@
         "  images_test.append(fd)\n",
         "  hogimages_test.append(hog_image)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -581,7 +581,7 @@
         "   ax2[i].imshow(np.reshape(X_test[i,0:n*n], (n, n)))\n",
         "   plt.tight_layout()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -655,7 +655,7 @@
         "# Prediction evaluation\n",
         "y_pred = model.predict(images_test)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -700,7 +700,7 @@
         "# Prediction evaluation\n",
         "y_pred_rf = model_rf.predict(images_test)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,7 +738,7 @@
         "      \n",
         "plot_examples(y_pred,y_test) "
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,7 +809,7 @@
         "plt.imshow(col_img, aspect='auto') \n",
         "plt.imshow( col_img ,'gray');"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -852,29 +852,26 @@
         "id": "eYaKILZzZlSD"
       },
       "source": [
-        "# Sliding Window Algorithm\n",
         "#   Sliding window is a rectangular region that slides across an image with a \n",
         "#   fixed width and height. In this case where the ships are found in the selected\n",
         "#   image.\n",
-        "\n",
-        "y_img, x_img = gray_img.shape\n",
         "\n",
         "windowStep = 10\n",
         "windowsize = 80\n",
         "\n",
         "found_boxes = []\n",
-        "for y in range(0, y_img, windowStep):\n",
-        "  for x in range(0, x_img, windowStep):\n",
-        "    image_patch = gray_img[y:y+windowsize, x:x+windowsize]\n",
-        "    if image_patch.shape[0] != windowSize or image_patch.shape[1] != windowSize: continue\n",
+        "for y in range(0, gray_img.shape[1], windowStep):\n",
+        "  for x in range(0, gray_img.shape[0], windowStep):\n",
+        "    window = gray_img[y:y+windowsize, x:x+windowsize]\n",
+        "    if window.shape[0] != windowSize or window.shape[1] != windowSize: continue\n",
         "    # Create descriptor for image patch\n",
-        "    df, hog_image = hogging(image_patch)\n",
-        "    yt_pred = model.predict(df.reshape(1,-1))\n",
+        "    fd, hog_image = hogging(window)\n",
+        "    yt_pred = model.predict(fd.reshape(1,-1))\n",
         "    if yt_pred:\n",
         "      # coords = [x, y, x+windowSize, y+windowSize]\n",
         "      found_boxes.append([x, y, x+windowSize, y+windowSize])"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -885,7 +882,7 @@
       "source": [
         "found_boxes = np.array(found_boxes, dtype=np.float32)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -932,7 +929,7 @@
         "plt.imshow(col_img, aspect='auto') \n",
         "plt.show()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -976,7 +973,7 @@
       "source": [
         ""
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     }
   ]
