--- a/Etivity_assignment3_OlgaMinguett_20179766.ipynb
+++ b/Etivity_assignment3_OlgaMinguett_20179766.ipynb
@@ -591,7 +591,6 @@
         "number_features_test = op_features_test.shape[3]\n",
         "\n",
         "number_pixel_test = image_y_test * image_x_test\n",
-        "iNumSamplesForPCA = number_images_test * number_pixel_test\n",
         "print('Number of Images in Test: {} x {} x {}'.format(number_images_test,image_x_test,image_y_test))\n",
         "print('Number of Feaures in Test:',number_features_test)\n",
         "print('Number of Samples in Test:', number_pixel_test)"
@@ -992,7 +991,29 @@
         "id": "9ICpXG08sl4r"
       },
       "source": [
-        ""
+        "def applyDDT(op_features_train, op_features_test, shape):\n",
+        "    # PCA Training\n",
+        "    number_images = op_features_train.shape[0]\n",
+        "    image_x = op_features_train.shape[1]\n",
+        "    image_y = op_features_train.shape[2]\n",
+        "    number_features = op_features_train.shape[3]\n",
+        "    number_pixel = number_images*image_x*image_y \n",
+        "    reshape_vectors_train = tf.reshape(op_features_train, [number_images*image_x*image_y,number_features])\n",
+        "\n",
+        "    # Find 1st Principal Component\n",
+        "    pca = PCA(n_components=1)\n",
+        "    first_principle_component = pca.fit_transform(reshape_vectors_train)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "    return "
       ],
       "execution_count": null,
       "outputs": []
