--- a/Etivity_assignment3_OlgaMinguett_20179766.ipynb
+++ b/Etivity_assignment3_OlgaMinguett_20179766.ipynb
@@ -794,6 +794,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eOxTTOJVAAT4"
+      },
+      "source": [
+        "## Run the VGG16 model and obtain the output feature maps for the last and 2nd last layers (on train and test data)."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -804,7 +813,6 @@
       },
       "source": [
         "# Select Output Layers\n",
-        "# Obtain the output feature maps for the 2nd last layers\n",
         "layer_names = ['block4_conv3']\n",
         "\n",
         "base_model = base_vgg_model()\n",
@@ -986,12 +994,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g0laNmQLADkL"
+      },
+      "source": [
+        "## Apply the DDT procedure on each batch of output feature maps producing binary upsampled (same size as image) maps."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9ICpXG08sl4r"
       },
       "source": [
-        "def applyDDT(op_features_train, op_features_test, shape):\n",
+        "def applyDDT(op_features_train, op_features_test, shape=(14,14)):\n",
         "    # PCA Training\n",
         "    number_images = op_features_train.shape[0]\n",
         "    image_x = op_features_train.shape[1]\n",
@@ -1004,24 +1021,92 @@
         "    pca = PCA(n_components=1)\n",
         "    first_principle_component = pca.fit_transform(reshape_vectors_train)\n",
         "\n",
+        "    # Reshape Vectors (n samples x n features)\n",
+        "    number_images_test = op_features_test.shape[0]\n",
+        "    image_x_test = op_features_test.shape[1]\n",
+        "    image_y_test = op_features_test.shape[2]\n",
+        "    number_features_test = op_features_test.shape[3]\n",
+        "    number_pixel_test = image_y_test * image_x_test\n",
         "\n",
+        "    #PCA Transform on test data\n",
+        "    maps = []\n",
+        "    bounding_boxes = []\n",
+        "    for i in range(number_images_test):\n",
+        "        # Reshape Vectors (n samples x n features) \n",
+        "        # (14 x 14) x 512 \n",
+        "        features_test = op_features_test[i]\n",
+        "        # Reshape for PCA\n",
+        "        features_reshape = tf.reshape(features_test,[number_pixel_test, number_features_test])\n",
         "\n",
+        "        # Find Principal Component Transform\n",
+        "        # Multiply Mean Adjusted Descriptor by Principal Component\n",
+        "        # pca = PCA(n_components=1)\n",
+        "        principle_component_transformed = pca.transform(features_reshape)\n",
         "\n",
+        "        # Reshape back to 14x14 \n",
+        "        reshape_images = tf.reshape(principle_component_transformed,shape)\n",
         "\n",
+        "        # Get Indicator Matrix\n",
+        "        reshape_images = reshape_images[..., tf.newaxis]\n",
+        "        #interpolating\n",
+        "        interpolated_images = tf.image.resize(reshape_images, [224,224], preserve_aspect_ratio=True, antialias=False, name=None)\n",
+        "        #interpolate to match image\n",
+        "        interpolated_images = tf.reshape(interpolated_images, [224,224], name=None)\n",
+        "        maps.append(interpolated_images)\n",
         "\n",
+        "        # load the input image from disk, convert it to grayscale\n",
+        "        image = interpolated_images.numpy().astype(np.uint8)\n",
         "\n",
+        "        # threshold \n",
+        "        thresh = cv2.threshold(image, 0, 255, cv2.THRESH_BINARY_INV | cv2.THRESH_OTSU)[1]\n",
         "\n",
+        "        # apply connected component analysis to the thresholded image\n",
+        "        output = cv2.connectedComponentsWithStats(thresh, cv2.CV_32S, connectivity=8)\n",
+        "        (numLabels, labels, stats, centroids) = output\n",
         "\n",
+        "        # extract the connected component statistics and centroid for the current label \n",
+        "        stats_ = stats[np.argsort(stats[:, cv2.CC_STAT_AREA])]\n",
+        "        \n",
+        "        if (numLabels > 0):\n",
+        "            x = stats_[1, cv2.CC_STAT_LEFT]/255\n",
+        "            y = stats_[1, cv2.CC_STAT_TOP]/255\n",
+        "            w = stats_[1, cv2.CC_STAT_WIDTH]/255\n",
+        "            h = stats_[1, cv2.CC_STAT_HEIGHT]/255\n",
+        "            area =  tf.constant([[y, x, y+h, x+w]]);\n",
+        "            bounding_boxes.append(area) \n",
+        "        else:\n",
+        "            bounding_boxes.append(tf.constant([[0, 0, 0, 0]]))\n",
         "\n",
-        "    return "
+        "    return bounding_boxes"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4SxhfLckslwQ"
+      },
+      "source": [
+        "a_43 = applyDDT(op_features_train_43, op_features_test_43, shape=(28,28))\n",
+        "b_53 = applyDDT(op_features_train_53, op_features_test_53, shape=(14,14))"
+      ],
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YKvnewOaAIK-"
+      },
+      "source": [
+        "## Obtain intersection (on a few example images), this is just a logical AND operation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KF0JPJKzAMXZ"
       },
       "source": [
         ""
